[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/consola.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://frames/Win.gd" type="Script" id=2]
[ext_resource path="res://sounds/Win.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="remove5" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="draw6" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="return" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1147.0
margin_bottom = 642.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 341.404
margin_top = 240.496
margin_right = 712.404
margin_bottom = 337.496
custom_fonts/font = SubResource( 1 )
text = "5 часов"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
[connection signal="timeout" from="remove5" to="." method="_on_remove5_timeout"]
[connection signal="timeout" from="draw6" to="." method="_on_draw6_timeout"]
[connection signal="timeout" from="return" to="." method="_on_return_timeout"]
